--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -72,7 +72,7 @@ jobs:
         android: true
         dotnet: true
         haskell: true
-        large-packages: true
+        large-packages: false
         swap-storage: true
         
     - name: 部署编译环境
